[package]
name = "sdrtrunk-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Web interface for SDRTrunk transcriber"
publish = false
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "web", "leptos", "frontend", "transcription"]
categories = ["web-programming", "multimedia"]

[[bin]]
name = "sdrtrunk-web-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
sdrtrunk-protocol = { path = "../sdrtrunk-protocol" }
sdrtrunk-types = { path = "../sdrtrunk-types" }
sdrtrunk-api = { path = "../sdrtrunk-api" }

# Configuration loading
config = { workspace = true }

# Web framework - Leptos with server-side rendering
leptos = { workspace = true }
leptos_router = { workspace = true }

# Server framework (reuse existing Axum)
axum = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization (reuse workspace)
serde = { workspace = true }
serde_json = { workspace = true }

# WebSocket support (minimal addition)
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# Logging (reuse workspace)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Date/time (reuse workspace)
chrono = { workspace = true }

# UUID (reuse workspace)
uuid = { workspace = true }

# URL encoding
urlencoding = { workspace = true }
gloo-net = { version = "0.7.0", features = ["http"] }
send_wrapper = "0.6.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[lints]
workspace = true
